k8s-keda/2-deploy/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cell-a
  labels:
    name: cell-a

---

apiVersion: v1
kind: Namespace
metadata:
  name: cell-b
  labels:
    name: cell-b
